# leap-year-api

./: README.MD  manage.py  pyproject.toml
PiscineEx2/: asgi.py  settings.py  urls.py  wsgi.py
leapyear_api/: manage.py  urls.py
leapyear_api/leapyear_api/: asgi.py  settings.py  wsgi.py
leapyear_api/leapyear_checker/: urls.py  views.py
leapyear_checker/: apps.py  models.py  tests.py  urls.py  views.py
leapyear_checker/migrations/: 0001_initial.py
